# timezone-rs

./: Cargo.toml  README.md
data_set/: README.md
data_set/timezonedb/: .gitignore  Cargo.toml  README.md
data_set/timezonedb/data/: README.md
data_set/timezonedb/src/: lib.rs
data_set/timezonedb/src/time_zone/: csv_format.rs  mod.rs  record.rs
